# lrose-solo-python

./: .gitignore  .pylintrc  Copy_of_TestSolo.ipynb  LICENSE  MANIFEST.in  README.md  TestSolo.ipynb  outputs.txt  setup.cfg  t.py  test_boundary_to_list.py
shelf/: test_package_real_A_data.bak
src/: main.py
src/pysolo/: __init__.py  boundary.py  enums.py
src/pysolo/c_wrapper/: DataPair.py  conversions.py  function_alias.py  hide_output.py  masked_op.py  run_solo.py
src/pysolo/solo_functions/: __init__.py  solo_despeckle.py  solo_fix_vortex_vels.py  solo_flag_freckles.py  solo_flag_glitches.py  solo_forced_unfolding.py  solo_merge_fields.py  solo_radial_shear.py  solo_rain_rate.py  solo_remove_ac_motion.py  (+5 more)
src/pysolo_package/: __init__.py  enums.py  radar_data.py  test.py
tests/: README.md  boundary_test.py  concurrency.py  demo_boundary_graph.py  demo_package_real.py  demo_script.py  demo_script_alt.py  fieldDBZ_F-sweep1-Boundary1:Zone.Identifier  fieldVEL_F-sweep1-Boundary1:Zone.Identifier  fieldVEL_F-sweep3-Boundary1:Zone.Identifier  import_package.py  quick.py  radar_data.nc  test.py  test_boundary.py  test_boundary_to_list.py  test_ctypes.py  test_dealiasing.py  test_functions.py  test_package.py  test_package_real.py  test_package_real_2.py  test_package_real_A.py  test_package_real_B.py  test_package_sample.py  test_package_scratch.py  test_poster.py
tests/data/: Custom-boundary1  Custom-boundary2  alex_output.nc  fieldDBZ-sweep0-Boundary1  radar_data_b  radar_data_d.nc  unfold_test.0_AIR_v3532
tests/shelf/: test_package_real_A_data.bak
(+51 files in other folders)
