[metadata]
name = pysolo-wip
version = 0.0.250
author = Ammar Siddiqi
author_email = siddiqi91899@gmail.com
description = Work in Progress
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NCAR/lrose-solo-python
project_urls =
    Bug Tracker = https://github.com/NCAR/lrose-solo-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    numpy

[options.packages.find]
where = src
